--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -10,6 +10,7 @@ button a {
     text-decoration-line: none;
 }
 
+
 .sticky-content {
     position: sticky;
     top: 0;
@@ -25,6 +26,7 @@ button a {
 .p-menu-list {
     margin: 4px;
     padding: 0;
+    font-size: 14px;
     width: 100%;
 }
 
